--- a/game_snake.html
+++ b/game_snake.html
@@ -148,5 +148,5 @@
         </div>
     </body>
     <script type="text/javascript" src="lemon_string_chart.js"></script>
-    <script type="text/javascript" src="game_tanchishe_ctrl.js"></script>
+    <script type="text/javascript" src="game_snake.js"></script>
 </html>
